# agtx

./: .mcp.json  CLAUDE.md  Cargo.toml  README.md
.claude/skills/build-and-symlink/: SKILL.md
.claude/skills/telegram-bridge-verify/: SKILL.md
benchmark/: README.md  RESULTS.md
benchmark/swebench/: benchmark.py  build_linux_binary.sh  prebake_images.py  pyproject.toml  report.py
benchmark/swebench/configs/: claude-agent-skills.toml  claude-agtx-terse.toml  claude-agtx.toml  claude-claude-opencode-agtx-terse.toml  claude-claude-opencode-agtx.toml  claude-codex-claude-agtx-terse.toml  claude-codex-claude-agtx.toml  claude-codex-gemini-agtx.toml  claude-opencode-claude-agtx-terse.toml  claude-opencode-claude-agtx.toml  claude-openspec.toml  claude-rtk-caveman-agtx.toml  claude-rtk-caveman-ponytail-agtx.toml  claude-rtk-caveman-superpowers.toml  claude-rtk-ponytail-agtx.toml  claude-spec-kit.toml  claude-superpowers.toml  codex-agtx-terse.toml  codex-agtx.toml  codex-claude-codex-agtx.toml  cursor-agtx.toml  gemini-agtx-terse.toml  gemini-agtx.toml  gemini-claude-codex-agtx-terse.toml  gemini-claude-codex-agtx.toml  gemini-codex-claude-agtx-terse.toml  gemini-codex-claude-agtx.toml  opencode-agtx-terse.toml  (+3 more)
plugins/bmad/: plugin.toml
plugins/openspec/: plugin.toml
src/: lib.rs  main.rs  skills.rs
src/agent/: mod.rs  operations.rs
src/config/: mod.rs
src/mcp/: server.rs
src/telegram/: api.rs  commands.rs  daemon.rs  extract.rs  mod.rs
src/tui/: app.rs  app_tests.rs  dep_graph.rs  mod.rs
tests/: agent_tests.rs  config_tests.rs  db_tests.rs
